# home_work4.0

./: README.md  main.py  pyproject.toml
src/: products.py
tests/: conftest.py  test_products.py
