[tool.poetry]
name = "home-work4-0"
version = "0.1.0"
description = ""
authors = ["Ivan <zhirnovivan1991@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work4"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.12.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
